feat(thymeleaf): utext

--- a/spring-thymeleaf/src/main/resources/messages.properties
+++ b/spring-thymeleaf/src/main/resources/messages.properties
@@ -2,3 +2,6 @@ hello=hello
 hello.name=hello {0}
 
 home.variables=variables: {0}, {1}
+address=localhost:8080
+includeTag1=<strong>hello</strong>
+includeTag2=aaa<br/>bbb<br/>ccc<br/>
