feat(thymeleaf): variables

--- a/spring-thymeleaf/src/main/resources/messages.properties
+++ b/spring-thymeleaf/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 hello=hello
 hello.name=hello {0}
 
-home.variables=variables: {0}, {1}
+home.variables=variables: data1={0}, data2={1}
 address=localhost:8080
 includeTag1=<strong>hello</strong>
 includeTag2=aaa<br/>bbb<br/>ccc<br/>
